@@ -16,6 +16,11 @@
 
 package org.tctalent.server.service.db.es;
 
+import co.elastic.clients.elasticsearch._types.FieldValue;
+import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
+import co.elastic.clients.elasticsearch._types.query_dsl.Operator;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import co.elastic.clients.elasticsearch._types.query_dsl.QueryBuilders;
 import io.jsonwebtoken.lang.Collections;
 import java.util.ArrayList;
 import java.util.LinkedHashSet;
@@ -23,22 +28,15 @@ import java.util.List;
 import java.util.Set;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.elasticsearch.index.query.BoolQueryBuilder;
-import org.elasticsearch.index.query.MatchBoolPrefixQueryBuilder;
-import org.elasticsearch.index.query.Operator;
-import org.elasticsearch.index.query.PrefixQueryBuilder;
-import org.elasticsearch.index.query.QueryBuilder;
-import org.elasticsearch.index.query.QueryBuilders;
-import org.elasticsearch.search.sort.SortBuilders;
-import org.elasticsearch.search.sort.SortOrder;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.elasticsearch.client.elc.NativeQuery;
+import org.springframework.data.elasticsearch.client.elc.NativeQueryBuilder;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
 import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.data.elasticsearch.core.mapping.IndexCoordinates;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQuery;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQueryBuilder;
 import org.springframework.lang.NonNull;
 import org.springframework.lang.Nullable;
 import org.springframework.stereotype.Service;
@@ -80,11 +78,11 @@ public class ElasticsearchServiceImpl implements ElasticsearchService {
    */
   @Override
   public Set<Long> findByName(@NonNull String name) {
-    BoolQueryBuilder boolQuery = computeFindByNameQuery(name);
-    SearchHits<CandidateEs> hits = executeQuery(boolQuery);
+    BoolQuery.Builder boolQuery = computeFindByNameQuery(name);
+    SearchHits<CandidateEs> hits = executeQuery(boolQuery.build()._toQuery());
     LinkedHashSet<Long> candidateIds = extractCandidateIds(hits);
 
-    log.info("Found candidate IDs: " + candidateIds);
+    log.info("ByName: Found candidate IDs: " + candidateIds);
 
     return candidateIds;
   }
@@ -94,11 +92,11 @@ public class ElasticsearchServiceImpl implements ElasticsearchService {
    */
   @Override
   public Set<Long> findByNumber(@NonNull String number) {
-    BoolQueryBuilder boolQuery = computeFindByNumberQuery(number);
-    SearchHits<CandidateEs> hits = executeQuery(boolQuery);
+    BoolQuery.Builder boolQuery = computeFindByNumberQuery(number);
+    SearchHits<CandidateEs> hits = executeQuery(boolQuery.build()._toQuery());
     LinkedHashSet<Long> candidateIds = extractCandidateIds(hits);
 
-    log.info("Found candidate IDs: " + candidateIds);
+    log.info("ByNumber: Found candidate IDs: " + candidateIds);
 
     return candidateIds;
   }
@@ -108,11 +106,11 @@ public class ElasticsearchServiceImpl implements ElasticsearchService {
    */
   @Override
   public Set<Long> findByPhoneOrEmail(@NonNull String number) {
-    BoolQueryBuilder boolQuery = computeFindByPhoneOrEmailQuery(number);
-    SearchHits<CandidateEs> hits = executeQuery(boolQuery);
+    BoolQuery.Builder boolQuery = computeFindByPhoneOrEmailQuery(number);
+    SearchHits<CandidateEs> hits = executeQuery(boolQuery.build()._toQuery());
     LinkedHashSet<Long> candidateIds = extractCandidateIds(hits);
 
-    log.info("Found candidate IDs: " + candidateIds);
+    log.info("ByPhoneOrEmail: Found candidate IDs: " + candidateIds);
 
     return candidateIds;
   }
@@ -122,42 +120,49 @@ public class ElasticsearchServiceImpl implements ElasticsearchService {
    */
   @Override
   public Set<Long> findByExternalId(@NonNull String number) {
-    BoolQueryBuilder boolQuery = computeFindByExternalIdQuery(number);
-    SearchHits<CandidateEs> hits = executeQuery(boolQuery);
+    BoolQuery.Builder boolQuery = computeFindByExternalIdQuery(number);
+    SearchHits<CandidateEs> hits = executeQuery(boolQuery.build()._toQuery());
     LinkedHashSet<Long> candidateIds = extractCandidateIds(hits);
 
-    log.info("Found candidate IDs: " + candidateIds);
+    log.info("ByExternalID: Found candidate IDs: " + candidateIds);
 
     return candidateIds;
   }
 
   @NotNull
-  private BoolQueryBuilder computeFindByNameQuery(String name) {
+  private BoolQuery.Builder computeFindByNameQuery(String name) {
     // Create match_bool_prefix query for name
-    MatchBoolPrefixQueryBuilder nameQuery = QueryBuilders
-        .matchBoolPrefixQuery(FULL_NAME_FIELD, name)
-        .operator(Operator.AND);
+    Query nameQuery = QueryBuilders.matchBoolPrefix()
+        .field(FULL_NAME_FIELD)
+        .query(name)
+        .operator(Operator.And)
+        .build()
+        ._toQuery();
 
     // Construct the boolean query
-    BoolQueryBuilder boolQuery = QueryBuilders.boolQuery()
+    BoolQuery.Builder boolQuery = QueryBuilders.bool()
         .must(nameQuery);
 
     // Filter out deleted Statuses and account for country restrictions
     boolQuery = filterOnDeletedStatus(boolQuery);
     boolQuery = filterOnSourceCountryRestrictions(boolQuery);
 
-    log.debug("Elasticsearch query:\n" + boolQuery);
+    log.info("Elasticsearch query:\n" + boolQuery);
     return boolQuery;
   }
 
   @NotNull
-  private BoolQueryBuilder computeFindByNumberQuery(String number) {
+  private BoolQuery.Builder computeFindByNumberQuery(String number) {
     // Create prefix query for candidate number
-    PrefixQueryBuilder cnQuery = QueryBuilders
-        .prefixQuery(CANDIDATE_NUMBER_FIELD, number);
+
+    Query cnQuery = QueryBuilders.prefix()
+        .field(CANDIDATE_NUMBER_FIELD)
+        .value(number)
+        .build()
+        ._toQuery();
 
     // Construct the boolean query
-    BoolQueryBuilder boolQuery = QueryBuilders.boolQuery()
+    BoolQuery.Builder boolQuery = QueryBuilders.bool()
         .must(cnQuery);
 
     // Filter out deleted Statuses and account for country restrictions
@@ -169,20 +174,25 @@ public class ElasticsearchServiceImpl implements ElasticsearchService {
   }
 
   @NotNull
-  private BoolQueryBuilder computeFindByPhoneOrEmailQuery(String input) {
+  private BoolQuery.Builder computeFindByPhoneOrEmailQuery(String input) {
     // Create prefix query for phone number
-    PrefixQueryBuilder phoneQuery = QueryBuilders
-        .prefixQuery(PHONE_NUMBER_FIELD, input);
+    Query phoneQuery = QueryBuilders.prefix()
+        .field(PHONE_NUMBER_FIELD)
+        .value(input)
+        .build()
+        ._toQuery();
 
     // Create prefix query for email
-    PrefixQueryBuilder emailQuery = QueryBuilders
-        .prefixQuery(EMAIL_FIELD, input);
+    Query emailQuery = QueryBuilders.prefix()
+        .field(EMAIL_FIELD)
+        .value(input)
+        .build()
+        ._toQuery();
 
     // Construct the boolean query with should clause
-    BoolQueryBuilder boolQuery = QueryBuilders.boolQuery()
-        .should(phoneQuery)
-        .should(emailQuery)
-        .minimumShouldMatch(1);  // Ensures at least one should clause must match
+    BoolQuery.Builder boolQuery = QueryBuilders.bool()
+        .should(List.of(emailQuery, phoneQuery))
+        .minimumShouldMatch("1"); // Ensures at least one should clause must match
 
     // Filter out deleted Statuses and account for country restrictions
     boolQuery = filterOnDeletedStatus(boolQuery);
@@ -193,13 +203,16 @@ public class ElasticsearchServiceImpl implements ElasticsearchService {
   }
 
   @NotNull
-  private BoolQueryBuilder computeFindByExternalIdQuery(String externalId) {
+  private BoolQuery.Builder computeFindByExternalIdQuery(String externalId) {
     // Create prefix query for external ID
-    PrefixQueryBuilder externalIdQuery = QueryBuilders
-        .prefixQuery(EXTERNAL_ID_FIELD, externalId);
+    Query externalIdQuery = QueryBuilders.prefix()
+        .field(EXTERNAL_ID_FIELD)
+        .value(externalId)
+        .build()
+        ._toQuery();
 
     // Construct the boolean query
-    BoolQueryBuilder boolQuery = QueryBuilders.boolQuery()
+    BoolQuery.Builder boolQuery = QueryBuilders.bool()
         .must(externalIdQuery);
 
     // Filter out deleted Statuses and account for country restrictions
@@ -212,17 +225,18 @@ public class ElasticsearchServiceImpl implements ElasticsearchService {
 
 
   @NotNull
-  private BoolQueryBuilder filterOnDeletedStatus(BoolQueryBuilder boolQuery) {
-    boolQuery = addElasticTermFilter(boolQuery,
+  private BoolQuery.Builder filterOnDeletedStatus(BoolQuery.Builder builder) {
+    builder = addElasticTermFilter(builder,
         SearchType.not,
         STATUS_KEYWORD,
         List.of(CandidateStatus.deleted)
     );
-    return boolQuery;
+
+    return builder;
   }
 
   @NotNull
-  private BoolQueryBuilder filterOnSourceCountryRestrictions(BoolQueryBuilder boolQuery) {
+  private BoolQuery.Builder filterOnSourceCountryRestrictions(BoolQuery.Builder builder) {
     User user = userService.getLoggedInUser();
     List<Object> countries = new ArrayList<>();
     if (user != null && !Collections.isEmpty(user.getSourceCountries())){
@@ -232,41 +246,46 @@ public class ElasticsearchServiceImpl implements ElasticsearchService {
     }
 
     if (!countries.isEmpty()) {
-      boolQuery = addElasticTermFilter(boolQuery,
+      builder = addElasticTermFilter(builder,
           SearchType.or,
           COUNTRY_KEYWORD,
           countries
       );
     }
-    return boolQuery;
+    return builder;
   }
 
   @NotNull
-  private BoolQueryBuilder addElasticTermFilter(
-      BoolQueryBuilder builder, @Nullable SearchType searchType, String field,
+  private BoolQuery.Builder addElasticTermFilter(
+      BoolQuery.Builder builder, @Nullable SearchType searchType, String field,
       List<Object> values) {
     final int nValues = values.size();
     if (nValues > 0) {
-      QueryBuilder queryBuilder;
+      Query qry;
       if (nValues == 1) {
-        queryBuilder = QueryBuilders.termQuery(field, values.get(0));
+        qry = QueryBuilders.term().field(field).value(FieldValue.of(values.getFirst())).build()
+            ._toQuery();
       } else {
-        queryBuilder = QueryBuilders.termsQuery(field, values.toArray());
+        qry = QueryBuilders.terms(tt -> tt
+            .field(field)
+            .terms(t -> t
+            .value(values.stream()
+                .map(FieldValue::of)
+                .toList())));
       }
       if (searchType == SearchType.not) {
-        builder = builder.mustNot(queryBuilder);
+        builder = builder.mustNot(qry);
       } else {
-        builder = builder.filter(queryBuilder);
+        builder = builder.filter(qry);
       }
     } return builder;
   }
 
   @NotNull
-  private SearchHits<CandidateEs> executeQuery(BoolQueryBuilder boolQuery) {
-    NativeSearchQuery query = new NativeSearchQueryBuilder()
-        .withQuery(boolQuery).withSorts(
-            SortBuilders.fieldSort("masterId").order(SortOrder.ASC)
-        )
+  private SearchHits<CandidateEs> executeQuery(Query boolQuery) {
+    NativeQuery query = new NativeQueryBuilder()
+        .withQuery(boolQuery)
+        .withSort(Sort.by("masterId").descending())
         .withPageable(PageRequest.of(0, 10))
         .build();
 
