@@ -18,6 +18,12 @@ package org.tctalent.server.service.db.impl;
 
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 
+import co.elastic.clients.elasticsearch._types.FieldValue;
+import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
+import co.elastic.clients.elasticsearch._types.query_dsl.ChildScoreMode;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import co.elastic.clients.elasticsearch._types.query_dsl.QueryBuilders;
+import co.elastic.clients.elasticsearch.core.search.ScoreMode;
 import com.opencsv.CSVWriter;
 import io.jsonwebtoken.lang.Collections;
 import java.io.IOException;
@@ -38,27 +44,21 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import javax.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 import net.javacrumbs.shedlock.spring.annotation.SchedulerLock;
-import org.apache.lucene.search.join.ScoreMode;
-import org.elasticsearch.index.query.BoolQueryBuilder;
-import org.elasticsearch.index.query.QueryBuilder;
-import org.elasticsearch.index.query.QueryBuilders;
-import org.elasticsearch.index.query.RangeQueryBuilder;
-import org.elasticsearch.index.query.SimpleQueryStringBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.elasticsearch.client.elc.NativeQuery;
+import org.springframework.data.elasticsearch.client.elc.NativeQueryBuilder;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
 import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.data.elasticsearch.core.mapping.IndexCoordinates;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQuery;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQueryBuilder;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.lang.NonNull;
 import org.springframework.lang.Nullable;
@@ -300,13 +300,14 @@ public class SavedSearchServiceImpl implements SavedSearchService {
             // This is an elasticsearch request
 
             // Combine any joined searches (which will all be processed as elastic)
-            BoolQueryBuilder boolQueryBuilder = processElasticRequest(searchRequest,
-                simpleQueryString, excludedCandidates);
+            BoolQuery boolQueryBuilder = processElasticRequest(searchRequest,
+                simpleQueryString, excludedCandidates).build();
 
-            NativeSearchQuery query = new NativeSearchQueryBuilder()
-                .withQuery(boolQueryBuilder)
-                .build()
-                .setPageable(Pageable.unpaged());
+            NativeQuery query = new NativeQueryBuilder()
+                .withQuery(
+                    Query.of(q -> q.bool(boolQueryBuilder)))
+                .withPageable(Pageable.unpaged())
+                .build();
 
             SearchHits<CandidateEs> hits = elasticsearchOperations.search(
                 query, CandidateEs.class, IndexCoordinates.of(CandidateEs.INDEX_NAME));
@@ -916,7 +917,7 @@ public class SavedSearchServiceImpl implements SavedSearchService {
         return query;
     }
 
-    private BoolQueryBuilder computeElasticQuery(
+    private BoolQuery.Builder computeElasticQuery(
         SearchCandidateRequest request, @Nullable String simpleQueryString,
         @Nullable Collection<Candidate> excludedCandidates) {
     /*
@@ -940,14 +941,14 @@ public class SavedSearchServiceImpl implements SavedSearchService {
 
         User user = userService.getLoggedInUser();
 
-        BoolQueryBuilder boolQueryBuilder = new BoolQueryBuilder();
+        BoolQuery.Builder boolQueryBuilder = QueryBuilders.bool();
 
         // Not every base search will contain an elastic search term, since we're processing
         // joined regular searches here too — so we need a safe escape here
         if (simpleQueryString != null && simpleQueryString.length() > 0) {
             // Create a simple query string builder from the given string
-            SimpleQueryStringBuilder simpleQueryStringBuilder =
-                QueryBuilders.simpleQueryStringQuery(simpleQueryString);
+            Query simpleQueryStringBuilder =
+                QueryBuilders.simpleQueryString().query(simpleQueryString).build()._toQuery();
 
             // The simple query will be part of a composite query containing filters
             boolQueryBuilder.must(simpleQueryStringBuilder);
@@ -997,8 +998,10 @@ public class SavedSearchServiceImpl implements SavedSearchService {
             Optional<Language> otherLanguage = languageRepository.findById(request.getOtherLanguageId());
             if (otherLanguage.isPresent()) {
 
-                BoolQueryBuilder nestedQueryBuilder = QueryBuilders.boolQuery().must(
-                        QueryBuilders.termQuery("otherLanguages.name.keyword", otherLanguage.get().getName()));
+                BoolQuery.Builder nestedQueryBuilder = QueryBuilders.bool().must(
+                    QueryBuilders.term()
+                        .field("otherLanguages.name.keyword")
+                            .value(otherLanguage.get().getName()).build()._toQuery());
 
                 Integer minOtherSpokenLevel = request.getOtherMinSpokenLevel();
                 if (minOtherSpokenLevel != null) {
@@ -1016,8 +1019,13 @@ public class SavedSearchServiceImpl implements SavedSearchService {
                                     minOtherWrittenLevel, null);
                 }
 
-                boolQueryBuilder = boolQueryBuilder.filter(
-                        QueryBuilders.nestedQuery("otherLanguages", nestedQueryBuilder, ScoreMode.Avg));
+                Query q = QueryBuilders.nested()
+                    .query(nestedQueryBuilder.build()._toQuery())
+                    .path("otherLanguages")
+                    .scoreMode(ChildScoreMode.Avg)
+                    .build().query();
+
+                boolQueryBuilder = boolQueryBuilder.filter(q);
             }
 
         }
@@ -1041,18 +1049,43 @@ public class SavedSearchServiceImpl implements SavedSearchService {
                 final Occupation occupation = occupationService.getOccupation(id);
                 reqOccupations.add(occupation.getName());
             }
+
             if (reqOccupations.size() > 0) {
-                BoolQueryBuilder nestedQueryBuilder = new BoolQueryBuilder();
-                nestedQueryBuilder = addElasticTermFilter(
-                    nestedQueryBuilder, SearchType.or, "occupations.name.keyword", reqOccupations);
+                BoolQuery.Builder nestedQryBuilder =
+                        addElasticTermFilter(
+                                QueryBuilders.bool(),
+                                SearchType.or,
+                                "occupations.name.keyword",
+                                reqOccupations
+                                );
+
                 if (minYrs != null || maxYrs != null) {
-                    nestedQueryBuilder = addElasticRangeFilter(
-                        nestedQueryBuilder, "occupations.yearsExperience", minYrs, maxYrs);
+                    nestedQryBuilder = addElasticRangeFilter(
+                            nestedQryBuilder,
+                            "occupations.yearsExperience",
+                            minYrs,
+                            maxYrs);
                 }
                 boolQueryBuilder = boolQueryBuilder.filter(
-                    QueryBuilders.nestedQuery(
-                        "occupations", nestedQueryBuilder, ScoreMode.Avg));
+                        QueryBuilders.nested()
+                                .query(nestedQryBuilder.build()._toQuery())
+                                .path("occupations")
+                                .scoreMode(ChildScoreMode.Avg)
+                                .build().query());
             }
+
+//            if (reqOccupations.size() > 0) {
+//                BoolQuery.Builder nestedQueryBuilder = QueryBuilders.bool();
+//                nestedQueryBuilder = addElasticTermFilter(
+//                    nestedQueryBuilder, SearchType.or, "occupations.name.keyword", reqOccupations);
+//                if (minYrs != null || maxYrs != null) {
+//                    nestedQueryBuilder = addElasticRangeFilter(
+//                        nestedQueryBuilder, "occupations.yearsExperience", minYrs, maxYrs);
+//                }
+//                boolQueryBuilder = boolQueryBuilder.filter(
+//                    QueryBuilders.nestedQuery(
+//                        "occupations", nestedQueryBuilder, ScoreMode.Avg));
+//            }
         }
 
         //Countries - need to take account of source country restrictions
@@ -1135,14 +1168,20 @@ public class SavedSearchServiceImpl implements SavedSearchService {
         String referrer = request.getRegoReferrerParam();
         if (referrer != null && !referrer.isEmpty()) {
             boolQueryBuilder = boolQueryBuilder.filter(
-                QueryBuilders.termQuery("regoReferrerParam.keyword", referrer));
+                QueryBuilders.term()
+                    .field("regoReferrerParam.keyword")
+                    .value(referrer)
+                    .build()._toQuery());
         }
 
         //Gender
         Gender gender = request.getGender();
         if (gender != null) {
             boolQueryBuilder = boolQueryBuilder.filter(
-                QueryBuilders.termQuery("gender", gender.name()));
+                QueryBuilders.term()
+                    .field("gender")
+                    .value(gender.name())
+                    .build()._toQuery());
         }
 
         //Education Level (minimum)
@@ -1172,11 +1211,13 @@ public class SavedSearchServiceImpl implements SavedSearchService {
         if (miniIntakeCompleted != null) {
             if (miniIntakeCompleted) {
                 boolQueryBuilder = boolQueryBuilder.filter(
-                    QueryBuilders.existsQuery("miniIntakeCompletedDate")
+                    QueryBuilders.exists(e -> e
+                        .field("miniIntakeCompletedDate"))
                 );
             } else {
                 boolQueryBuilder = boolQueryBuilder.mustNot(
-                    QueryBuilders.existsQuery("miniIntakeCompletedDate")
+                    QueryBuilders.exists(e -> e
+                        .field("miniIntakeCompletedDate"))
                 );
             }
         }
@@ -1186,11 +1227,14 @@ public class SavedSearchServiceImpl implements SavedSearchService {
         if (fullIntakeCompleted != null) {
             if (fullIntakeCompleted) {
                 boolQueryBuilder = boolQueryBuilder.filter(
-                    QueryBuilders.existsQuery("fullIntakeCompletedDate")
+                    QueryBuilders.exists(e -> e
+                        .field("fullIntakeCompletedDate"))
                 );
             } else {
+
                 boolQueryBuilder = boolQueryBuilder.mustNot(
-                    QueryBuilders.existsQuery("fullIntakeCompletedDate")
+                    QueryBuilders.exists(e -> e
+                        .field("fullIntakeCompletedDate"))
                 );
             }
 
@@ -1276,27 +1320,33 @@ public class SavedSearchServiceImpl implements SavedSearchService {
         }
     }
 
-    private BoolQueryBuilder addElasticRangeFilter(
-        BoolQueryBuilder builder, String field,
+    private BoolQuery.Builder addElasticRangeFilter(
+        BoolQuery.Builder builder, String field,
         @Nullable Object min, @Nullable Object max) {
         if (min != null || max != null) {
-            RangeQueryBuilder rangeQueryBuilder =
-                QueryBuilders.rangeQuery(field).from(min).to(max);
+            Query rangeQueryBuilder =
+                QueryBuilders.range(r -> r.field(field).from(String.valueOf(min)).to(String.valueOf(max)));
             builder = builder.filter(rangeQueryBuilder);
         }
         return builder;
     }
 
-    private BoolQueryBuilder addElasticTermFilter(
-        BoolQueryBuilder builder, @Nullable SearchType searchType, String field,
+    private BoolQuery.Builder addElasticTermFilter(
+        BoolQuery.Builder builder, @Nullable SearchType searchType, String field,
         List<Object> values) {
         final int nValues = values.size();
         if (nValues > 0) {
-            QueryBuilder queryBuilder;
+            Query queryBuilder;
             if (nValues == 1) {
-                queryBuilder = QueryBuilders.termQuery(field, values.get(0));
+                queryBuilder = QueryBuilders.term().field(field).value(FieldValue.of(values.getFirst())).build()
+                    ._toQuery();
             } else {
-                queryBuilder = QueryBuilders.termsQuery(field, values.toArray());
+                queryBuilder = QueryBuilders.terms(tt -> tt
+                    .field(field)
+                    .terms(t -> t
+                        .value(values.stream()
+                            .map(FieldValue::of)
+                            .toList())));
             }
             if (searchType == SearchType.not) {
                 builder = builder.mustNot(queryBuilder);
@@ -1306,7 +1356,7 @@ public class SavedSearchServiceImpl implements SavedSearchService {
         } return builder;
     }
 
-    private BoolQueryBuilder addElasticQuery(BoolQueryBuilder boolQueryBuilder,
+    private BoolQuery.Builder addElasticQuery(BoolQuery.Builder boolQueryBuilder,
         SearchJoinRequest searchJoinRequest, List<Long> savedSearchIds) {
         // We don't want searches built on themselves - this is also guarded against in frontend
         if (savedSearchIds.contains(searchJoinRequest.getSavedSearchId())) {
@@ -1324,17 +1374,17 @@ public class SavedSearchServiceImpl implements SavedSearchService {
             computeCandidatesExcludedFromSearchCandidateRequest(request);
 
         // Each recursion, if any, is added to the query as an additional must clause
-        boolQueryBuilder.must(
-            computeElasticQuery(request, simpleStringQuery, excludeCandidates)
+        BoolQuery.Builder bqb = boolQueryBuilder.must(
+            computeElasticQuery(request, simpleStringQuery, excludeCandidates).build()._toQuery()
         );
 
         // Like addQuery(), this method uses recursion to get every nested SearchJoinRequest
         if (!request.getSearchJoinRequests().isEmpty()) {
             for (SearchJoinRequest joinRequest : request.getSearchJoinRequests()) {
-                boolQueryBuilder = addElasticQuery(boolQueryBuilder, joinRequest, savedSearchIds);
+                bqb = addElasticQuery(boolQueryBuilder, joinRequest, savedSearchIds);
             }
         }
-        return boolQueryBuilder;
+        return bqb;
     }
 
     private Specification<Candidate> addQuery(Specification<Candidate> query, SearchJoinRequest searchJoinRequest, List<Long> savedSearchIds) {
@@ -1711,7 +1761,7 @@ public class SavedSearchServiceImpl implements SavedSearchService {
             // This is an elasticsearch request
 
             // Combine any joined searches (which will all be processed as elastic)
-            BoolQueryBuilder boolQueryBuilder = processElasticRequest(searchRequest,
+            BoolQuery.Builder boolQueryBuilder = processElasticRequest(searchRequest,
                 simpleQueryString, excludedCandidates);
 
             //Define sort from request
@@ -1720,8 +1770,8 @@ public class SavedSearchServiceImpl implements SavedSearchService {
             log.info("Elasticsearch query:\n" + boolQueryBuilder);
             log.info("Elasticsearch sort:\n" + req);
 
-            NativeSearchQuery query = new NativeSearchQueryBuilder()
-                .withQuery(boolQueryBuilder)
+            NativeQuery query = new NativeQueryBuilder()
+                .withQuery(boolQueryBuilder.build()._toQuery())
                 .withPageable(req)
                 .build();
 
@@ -1815,7 +1865,7 @@ public class SavedSearchServiceImpl implements SavedSearchService {
         }
     }
 
-    private BoolQueryBuilder processElasticRequest(SearchCandidateRequest searchRequest,
+    private BoolQuery.Builder processElasticRequest(SearchCandidateRequest searchRequest,
         String simpleQueryString, Set<Candidate> excludedCandidates) {
         // If saved search, add to searchIds to guard against circular dependencies
         List<Long> searchIds = new ArrayList<>();
@@ -1823,7 +1873,7 @@ public class SavedSearchServiceImpl implements SavedSearchService {
             searchIds.add(searchRequest.getSavedSearchId());
         }
 
-        BoolQueryBuilder boolQueryBuilder = computeElasticQuery(searchRequest,
+        BoolQuery.Builder boolQueryBuilder = computeElasticQuery(searchRequest,
             simpleQueryString, excludedCandidates);
 
         // Add any joined searches to the builder
